# QMUL-FunctionalProgrammingGroupProject

./: .gitignore  README.md  Report_Functional_Programming.odt  groupproject.cabal  stack.yaml
app/: Main.hs
docs/: DataBaseModule.html  DataStructures.html  HTTPRequestModule.html  HTTPRequestModule2.html  IOActionModule.html  JSONParserModule.html  Main.html  doc-index.html  index-frames.html  index.html  mini_DataStructures.html  mini_HTTPRequestModule.html  mini_JSONParserModule.html
docs/src/: DataBaseModule.html  DataStructures.html  HTTPRequestModule.html  HTTPRequestModule2.html  IOActionModule.html  JSONParserModule.html  Main.html
src/: DataBaseModule.hs  DataStructures.hs  HTTPRequestModule.hs  HTTPRequestModule2.hs  IOActionModule.hs  JSONParserModule.hs
test/: Spec.hs
