name:                groupproject
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/IncredibleHannes/QMUL-FunctionalProgrammingGroupProject#readme
license:             MIT
license-file:        LICENSE
author:              Johannes Hartmann, Liam Kelly, Manuel Campos Villarreal
maintainer:          example@example.com
copyright:           2017 Johannes Hartmann, Liam Kelly, Manuel Campos Villarreal
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DataBaseModule
                       , HTTPRequestModule
                       , HTTPRequestModule2
                       , IOActionModule
                       , DataStructures
                       , JSONParserModule
  build-depends:       base >= 4.7 && < 5
                       , HDBC
                       , HDBC-sqlite3
                       , http-client
                       , datetime
                       , http-conduit
                       , network-uri
                       , aeson
                       , text
                       , bytestring
                       , parallel
  default-language:    Haskell2010


executable groupproject-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , groupproject
  default-language:    Haskell2010

test-suite groupproject-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , groupproject
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/IncredibleHannes/QMUL-FunctionalProgrammingGroupProject
